[workspace]
resolver = "2"

members = [ "common", "workload", "webapp", "sched_switch"]

[workspace.lints.clippy]
new_without_default = "allow"

[workspace.dependencies]
crossbeam = "0.8"
toml = "0.8.8"
clap = { version = "4.3", default-features = false, features = ["std", "derive"] }
serde = { version="1", features=["derive"] }
serde_json = "1"
rand = "0.8.5"
lazy_static = "1"
bincode = "1"
