[package]
name = "collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
mach-lib = { path = "../mach-lib" }

crossbeam = { workspace = true }
bincode = { workspace = true }

[lints]
workspace = true
