[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
crossbeam = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
