[package]
name = "kv-workload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
rand = "0.8.5"
clap = { version = "4.3", default-features = false, features = ["std", "derive"] }
lazy_static = "1"
thread-priority = "0.16.0"
serde = { version="1", features=["derive"] }
bincode = "1"

dashmap = "5"
core_affinity = "0.8.1"
rocksdb = "0.22"

api = { path = "../api" }
