[package]
name = "mach-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
serde = { version="1", features=["derive"] }
fxhash = "0.2.1"
clap = "4.5"

common = { path = "../common" }
mach-lib = { path = "../mach-lib" }

[lib]
name = "mach_server"
path = "src/lib.rs"

[[bin]]
name = "mach-server"
path = "src/mach-server.rs"

