[package]
name = "monitoring-application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
crossbeam = "0.8.4"
fxhash = "0.2.1"


[lib]
name = "monitoring_application"
path = "src/api.rs"

