[package]
name = "monitoring-application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
crossbeam = "0.8.4"
fxhash = "0.2.1"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = "0.4"

api = { path = "../api" }
mach-lib = { path = "../mach-lib" }
influxdb_iox_client = { path = "../influxdb/influxdb_iox_client" }
influxdb-line-protocol = { path = "../influxdb/influxdb_line_protocol" }
arrow = { version = "46.0.0" }

