[package]
name = "sched_switch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = "0.21.1"
libc = "0.2"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
libbpf-cargo = "0.21.1"
