[package]
name = "scheduler-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = "0.21.1"
libc = "0.2"
clap = { version = "4.3", default-features = false, features = ["std", "derive"] }
crossbeam = "0.8"
lazy_static = "1"
core_affinity = "0.8.1"
serde = { version = "1", features = ["derive"] }

monitoring-application = { path = "../monitoring-application" }

[build-dependencies]
libbpf-cargo = "0.21.1"
