[package]
name = "syscall-latency"
version = "0.1.0"
license = "LGPL-2.1-only OR BSD-2-Clause"
edition = "2021"

[dependencies]
anyhow = "1.0"
libbpf-rs = "0.21.2"
libc = "0.2"
lazy_static = "1.4.0"
clap = { version = "4.0.32", default-features = false, features = ["std", "derive", "help", "usage"] }
crossbeam = "0.8.2"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
libbpf-cargo = "0.21.2"

