[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["ws", "json"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["cors"] }
dashmap = "5.0"
rand = "0.8.5"
serde = { version="1", features=["derive"] }
serde_json = "1"
lazy_static = "1"
crossbeam = "0.8"
bincode = "1"
chrono = { version = "0.4.37", features = ["alloc"] }

common = { path = "../common" }
mach-lib = { path = "../mach-lib" }
influxdb_iox_client = { path = "../influxdb/influxdb_iox_client" }
influxdb-line-protocol = { path = "../influxdb/influxdb_line_protocol" }
arrow = { version = "46.0.0" }
#influxdb3_client = { path = "../influxdb/influxdb3_client" }

